cmake_minimum_required(VERSION 2.8) 
project(dynamics_integration)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
find_package(Ceres REQUIRED)
set(EIGEN3_INCLUDE_DIR /usr/include/eigen3)
include_directories("${EIGEN3_INCLUDE_DIR}")
include_directories(${CERES_INCLUDE_DIRS})
add_executable(dynamics_integration optimization.cpp pose_local_parameterization.cpp) 
target_link_libraries(dynamics_integration ${CERES_LIBRARIES})